--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eat-Da-Burgers</title>
+    <title>Burgers for All!</title>
     
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
@@ -29,7 +29,7 @@
       <header>
     		<div class="jumbotron text-center">
     		  
-          <img class="img-responsive center-block" alt="burger" src="/assets/img/burger.png">
+          <img class="img-responsive center-block" alt="burger" src="/assets/img/Burgers.jpg">
     		 
           <h1 class="page-header">Burgers for All!</h1>
           
