--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
       <header>
     		<div class="jumbotron text-center">
     		  
-          <img class="img-responsive center-block" alt="burger" src="../assets/img/Burgers.jpg">
+          <img class="img-responsive center-block" alt="burger" src="/assets/images/burger.jpg">
     		 
           <h1 class="page-header">Burgers for All!</h1>
           
